src/test/compile-fail/put-in-fn.rs
// xfail-stage0
// xfail-stage1
// xfail-stage2
// xfail-stage3
// error-pattern: iterator function

fn f() -> int {
  put 10;
}

fn main() {
}
